2014-09-26 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFRuntime.c: Handle NULL pointer correctly.
	* Source/CFString.c: Switch to using GSUnicodeFormatWithArguments.
	* Source/CFStringFormat.c: Deleted.  New formatting facilities
	available.
	* Source/GSUnicode.c: Fixed many bugs found by test suite.
	* Tests/CFString/format.m: Deleted.
	* Tests/CFString/format_int.m: Integer only tests.
	* Tests/CFString/format_misc.m: Miscellaneous tests, including string,
	character and pointer.

2014-09-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* Source/CFSocket.c: Fix build without libdispatch.
	* Headers/CoreFoundation/CFBase.h.in,
	  configure,
	  configure.ac: Use correct sign for data types.

2014-05-06 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFRunLoop.c,
	  Headers/CoreFoundation/CFRunLoop.h: CFRunLoop improvements & fixes
	* Source/CFArray.c: Fixes
	* Source/CFSocket.c: CFSocket integration with CFRunLoop
	* Source/config.h.in,
	  configure,
	  configure.ac: libdispatch detection
	* Source/GNUmakefile.in,
	  Source/NSCFType.m,
	  Source/NSCFDate.m,
	  Source/CFDate.c: CFDateRef toll-free bridging

2014-04-20 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFRunLoop.c,
	  Tests/CFRunLoop/timers.m: CFRunLoop timer fixes and tests

2014-04-18 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFRunLoop.c,
	  Tests/CFRunLoop/source.m: CFRunLoop impl that passes the test

2014-04-16 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFRunLoop.c,
	  Source/CFRuntime.c: Work on CFRunLoop

2014-02-19 Stefan Bidigaray <stefanbidi@gmail.com>
	* configure,
	* configure.ac: Use autoconf's built-in functions and introduce
	function to check the architecture's data model.
	* Headers/CoreFoundation/CFBase.h,
	* Headers/CoreFoundation/CFBase.h.in: Used data model information.
	* Source/CFLocale.c: Use CF defined type (UInt32).

2014-02-03 Lubos Dolezel <lubos@dolezel.info>
	* Source/CFStream.c: Initial CFReadStream implementation, generalization