@@ -1,3 +1,9 @@
+2014-10-07 Stefan Bidigaray <stefanbidi@gmail.com>
+	* Source/GSUnicode.c: Initial double formatting implementation.
+	Only supports inf and nan for now.
+	* Tests/CFString/format_errors.m: Test for common errors.
+	* Tests/CFString/format_float.m: Test for inf and nan.
+
 2014-09-26 Stefan Bidigaray <stefanbidi@gmail.com>
 	* Source/CFRuntime.c: Handle NULL pointer correctly.
 	* Source/CFString.c: Switch to using GSUnicodeFormatWithArguments.
